# regenie

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile
external_libs/bgen-v1.1.7/: .lock-waf_darwin_build
external_libs/mvtnorm/: Makefile
external_libs/pgenlib/: Makefile
external_libs/qf/: Makefile
external_libs/quadpack/: Makefile
external_libs/remeta/: Makefile
scripts/: regenie_docker.sh
src/: Data.cpp  Data.hpp  Geno.cpp  Geno.hpp  Regenie.cpp  Regenie.hpp  Step2_Models.cpp
test/: copy_test_files.sh  regenie_test.annotations.tsv  regenie_test.covariates.tsv  regenie_test.masks.tsv  regenie_test.phenotypes.tsv  regenie_test.sets.tsv  regenie_test_burden.bgen  regenie_test_burden.sample  regenie_test_lof.bgen  regenie_test_lof.sample  regenie_test_snps.bgen  regenie_test_snps.sample  regenie_test_to_keep.fam
